--- a/style.css
+++ b/style.css
@@ -1,4 +1,10 @@
+h1 {
+    font-family: 'Roboto', sans-serif;
+    font-size: large;
+    text-align: center;
+}
 p {
     font-family: 'Roboto', sans-serif;
+    font-size: large;
     text-align: center;
 }
