--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -1,10 +1,24 @@
 
-h1, h2, h3 {
-    font-family: 'Roboto', sans-serif;
-    text-align: center;
+body {
+    background-color:aliceblue;
 }
-p, ul {
+
+.intro {    
     font-family: 'Roboto', sans-serif;
     font-size: large;
     text-align: center;
+}
+.contact {
+    font-family: 'Roboto', sans-serif;
+    font-size: large;
+    text-align: center;
+}
+
+.footer {
+    font-family: 'Architects Daughter', cursive;
+    font-size: 18px;
+    text-align: center;
+}
+h1, h3 {  
+    font-weight: bold;
 }
