--- a/blog/blog_entries/resources/css/style-post.css
+++ b/blog/blog_entries/resources/css/style-post.css
@@ -1,15 +1,7 @@
 
 body {
-    background-color:aliceblue;
+    background-color: rgb(255, 246, 228);
 }
-
-table {
-    margin-left: auto;
-    margin-right: auto;
-    border-collapse: separate;
-    border-spacing: 20px;
-}
-
 
 .back {
     font-family: 'Roboto', sans-serif; 
