--- a/blog/resources/css/style.css
+++ b/blog/resources/css/style.css
@@ -1,17 +1,30 @@
 
 body {
-    background-color:aliceblue;
+    background-color: rgb(255, 246, 228);
 }
 
 .back {
     font-family: 'Roboto', sans-serif;
     font-size: large;   
 }
+
+table {
+    margin-left: auto;
+    margin-right: auto;
+    border-collapse: separate;
+    border-spacing: 20px;
+}
+
+.menu {
+    font-family: 'Roboto', sans-serif;
+    font-size: large;
+    text-align: center;
+}
+
 .entries {
     font-family: 'Roboto', sans-serif;
     font-size: large;   
 }
-
 
 .footer {
     font-family: 'Architects Daughter', cursive;
