--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -1,19 +1,19 @@
 
 body {
-    background-color:aliceblue;
+    background-color: rgb(255, 246, 228);
 }
 
 table {
     margin-left: auto;
     margin-right: auto;
     border-collapse: separate;
-    border-spacing: 20px;
+    border-spacing: 80px 5px;
 }
 
 
 .menu {
     font-family: 'Roboto', sans-serif;
-    font-size: large;
+    font-size: x-large;
     text-align: center;    
 }
 
@@ -27,6 +27,10 @@ table {
     font-size: large;
     text-align: center;
 }
+
+hr.solid {
+    border-top: 1px solid #000000;
+  }
 
 .footer {
     font-family: 'Architects Daughter', cursive;
