--- a/blog/blog_entries/resources/css/style-post.css
+++ b/blog/blog_entries/resources/css/style-post.css
@@ -1,6 +1,10 @@
 
+html {
+    font-family: 'Roboto', sans-serif;    
+}
+
 body {
-    background-color: rgb(255, 246, 228);
+    background-color:aliceblue;
 }
 
 .back {
