--- a/resources/css/style-post.css
+++ b/resources/css/style-post.css
@@ -3,6 +3,10 @@ html {
     font-family: 'Roboto', sans-serif;    
 }
 
+h1, h2, h3 {  
+    font-weight: bold;
+    font-family: 'Roboto', sans-serif;
+}
 table {
     margin-left: auto;
     margin-right: auto;
@@ -30,7 +34,9 @@ body {
     font-size: large;   
 }
 
-h1, h2, h3 {  
-    font-weight: bold;
-    font-family: 'Roboto', sans-serif;
+.center {
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    width: 50%;
 }
