--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -1,7 +1,8 @@
 /* universal styles */
 
 html {
-    font-family: 'IBM Plex Mono', monospace;    
+    font-family: 'IBM Plex Mono', monospace;
+    font-size: 20px;  
 }
 
 body {
