--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -34,6 +34,7 @@ img {
     font-size: x-large;
     text-align: center;
     background-color:lightsteelblue;  
+    position: fixed;
 }
 
 .intro-head {    
